--- a/packages/gatsby-theme-apollo-docs/package.json
+++ b/packages/gatsby-theme-apollo-docs/package.json
@@ -17,38 +17,38 @@
     "docs"
   ],
   "dependencies": {
-    "@mdx-js/mdx": "^1.1.0",
-    "@mdx-js/react": "^1.0.27",
-    "gatsby-plugin-google-analytics": "^2.2.5",
-    "gatsby-plugin-mdx": "^1.0.23",
-    "gatsby-plugin-printer": "1.0.x",
+    "@mdx-js/mdx": "^1.6.16",
+    "@mdx-js/react": "^1.6.16",
+    "gatsby-plugin-google-analytics": "^2.3.13",
+    "gatsby-plugin-mdx": "^1.2.34",
+    "gatsby-plugin-printer": "^1.1.1",
     "gatsby-remark-autolink-headers": "^2.3.11",
     "gatsby-remark-check-links": "^2.1.0",
     "gatsby-remark-code-titles": "^1.1.0",
-    "gatsby-remark-copy-linked-files": "^2.0.12",
+    "gatsby-remark-copy-linked-files": "^2.3.12",
     "gatsby-remark-mermaid": "^1.2.0",
-    "gatsby-remark-prismjs": "^3.2.8",
+    "gatsby-remark-prismjs": "^3.5.10",
     "gatsby-remark-rewrite-relative-links": "^1.0.8",
-    "gatsby-source-filesystem": "^2.0.29",
-    "gatsby-source-git": "^1.0.1",
-    "gatsby-theme-apollo-core": "npm:@unchainedshop/gatsby-theme-apollo-core@latest",
-    "gatsby-transformer-remark": "^2.6.30",
-    "js-yaml": "^3.13.1",
+    "gatsby-source-filesystem": "^2.3.24",
+    "gatsby-source-git": "^1.1.0",
+    "gatsby-theme-apollo-core": "npm:@unchainedshop/gatsby-theme-apollo-core@^3.0.19",
+    "gatsby-transformer-remark": "^2.8.28",
+    "js-yaml": "^3.14.0",
     "prismjs": "^1.15.0",
     "react-textfit": "^1.1.0",
     "recompose": "^0.30.0",
     "rehype-react": "^3.1.0",
     "remark": "^10.0.1",
     "remark-react": "^5.0.1",
-    "remark-typescript": "^0.3.0",
-    "simple-git": "^2.7.0",
+    "remark-typescript": "^0.3.1",
+    "simple-git": "^2.18.0",
     "source-sans-pro": "^3.6.0",
     "striptags": "^3.1.1"
   },
   "devDependencies": {
-    "gatsby": "^2.24.23",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0"
+    "gatsby": "^2.24.47",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
   },
   "peerDependencies": {
     "gatsby": "^2.13.80",
